--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,35 @@
 /* write your override styles here */
+
+
+#wall .tag-1 {
+  display: none;
+}
+ 
+.tag-1 #tag-2{
+   display: none;
+}
+
+
+div#wall.tag-1#tag-2#tag-3.slick wicked{
+  display: none;
+} 
+ 
+.parent  {
+ display: none;
+}
+
+#wall #tag-4 {
+ display: none;
+}
+
+div#wall .parent #tag-5.slick {
+    display: none;
+}
+
+
+
+
+
+ 
+
+
